# weather

./: .env.example  .gitignore  BUILD.md  CLAUDE.md  README.md  SPEC.md  bot_v2.py  config.json  pyproject.toml  requirements.txt  setup.py  weatherbet.py
.github/workflows/: ci.yml
tests/: test_app.py  test_backtests.py  test_calibration.py  test_cli.py  test_dashboard.py  test_execution_router.py  test_execution_service.py  test_finance.py  test_lifecycle.py  test_probability.py  test_reporting.py  test_risk.py  test_runner_integration.py  test_scan.py  test_scanner.py
weather/: __init__.py  app.py  config.py  engine.py  reporting.py  runtime.py  scan.py
weather/backtests/: engine.py  loaders.py  metrics.py
weather/cli/: main.py
weather/core/: __init__.py  constants.py  finance.py  probability.py  types.py
weather/data/: __init__.py  mapping.py  snapshots.py  storage.py
weather/data/models/: __init__.py  metar.py  openmeteo.py  visualcrossing.py
weather/execution/: __init__.py  auth.py  polymarket.py  router.py  service.py
weather/strategy/: __init__.py  calibration.py  lifecycle.py  risk.py  scanner.py  sizing.py
weather/ui/: __init__.py  dashboard.py
